# app/Models/Order.php
@@ -3,8 +3,10 @@
 namespace App\Models;
 
 use App\Traits\Uuid;
+use Illuminate\Contracts\Database\Eloquent\Builder;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
+use Illuminate\Database\Eloquent\Casts\Attribute;
 
 class Order extends Model
 {
@@ -28,8 +30,17 @@ class Order extends Model
         'products' => 'json',
         'address' => 'json',
         'amount' => 'float',
-        'deliery_fee' => 'float',
+        'delivery_fee' => 'float',
     ];
+
+    protected static function boot()
+    {
+        parent::boot();
+
+        static::addGlobalScope('user', function (Builder $builder) {
+            $builder->where('user_id', auth()->user()->uuid);
+        });
+    }
 
     public function user()
     {
@@ -43,11 +54,18 @@ class Order extends Model
 
     public function payment()
     {
-        return $this->belongsTo(Payment::class);
+        return $this->belongsTo(Payment::class, 'payment_id', 'uuid');
     }
 
-    public function products()
+    public function orderProducts()
     {
-        return Product::whereIn('uuid', collect($this->products)->pluck('product'))->get();
+        $productIds = collect(json_decode($this->products))->pluck('product')->toArray();
+        return $this->hasMany(Product::class, 'uuid', $productIds);
+    }
+
+    public function products(string $productsJson)
+    {
+        $productIds = collect(json_decode($productsJson))->pluck('product')->toArray();
+        return Product::whereIn('uuid', $productIds)->get();
     }
 }
