# routes/api.php
@@ -6,6 +6,8 @@ use App\Http\Controllers\Api\V1\Auth\Admin\RegisterController;
 use App\Http\Controllers\Api\V1\Auth\LoginController;
 use App\Http\Controllers\Api\V1\Auth\LogoutController;
 use App\Http\Controllers\Api\V1\Auth\PasswordUpdateController as AuthPasswordUpdateController;
+use App\Http\Controllers\Api\V1\OrderController;
+use App\Http\Controllers\Api\V1\ProductController;
 use Illuminate\Support\Facades\Route;
 
 /*
@@ -33,4 +35,6 @@ Route::group(['middleware' => ['auth:api']], function () {
         Route::post('user/logout', LogoutController::class);
         Route::put('forgot-password', AuthPasswordUpdateController::class);
     });
+    Route::apiResource('order', OrderController::class);
+    Route::apiResource('product', ProductController::class);
 });
